# SAFRAN

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Main.cpp  README.md  README.rst  SAFRAN.sln  SAFRAN.vcxproj  SAFRAN.vcxproj.filters
.github/workflows/: build_cmake.yml
CPU/: CMakeLists.txt  CSR.hpp  Clustering.hpp  ClusteringApplication.hpp  ClusteringEngine.hpp  ClusteringReader.hpp  FastRuleEngine.hpp  Graph.hpp  IRIFAB_noisyor.sln  IRIFAB_noisyor.vcxproj  IRIFAB_noisyor.vcxproj.filters  Index.hpp  JaccardCalculator.hpp  Main.cpp  MinHash.hpp  MinHeap.hpp  NoisyOrEngine.hpp  OriginalRuleEngine.hpp  Properties.hpp  Result.hpp  Rule.hpp  RuleEngine.hpp  RuleGraph.hpp  RuleReader.hpp  ScoreTree.hpp  TesttripleReader.hpp  TraintripleReader.hpp  Trial.hpp  Types.h  Util.hpp  ValidationtripleReader.hpp
CPU/enc_temp_folder/b0f2709ebd1d735143439ef12e1ea/: JaccardCalculator.hpp
CUDA/: Graph.hpp  Rule.hpp  RuleReader.hpp  ScoreTree.hpp  TesttripleReader.hpp  Util.hpp  kernel.cu
binaries/: config-apply.properties
binaries/linux/: IRIFAB
binaries/windows/: config-apply.properties
docs/: make
docs/source/: conf.py  index.rst  installation.rst  results.rst
docs/source/manual/: actions.rst  applymax.rst  applynoisy.rst  applynrnoisy.rst  calcjacc.rst  command_lines.rst  evaluation.rst  expl.rst  input_fmt.rst  learnnrnoisy.rst  properties.rst  trial.rst
include/: ApplicationEngine.h  CSR.hpp  Clustering.h  ClusteringEngine.h  ClusteringReader.h  Explaination.h  Explanation.h  Graph.h  InMemoryExplanation.h  Index.h  JaccardEngine.h  MinHash.h  MinHeap.h  Properties.h  Properties.hpp  Rule.h  RuleApplication.h  RuleGraph.h  RuleReader.h  SQLiteExplanation.h  ScoreTree.h  TesttripleReader.h  TraintripleReader.h  Trial.h  Types.h  Util.hpp  ValidationtripleReader.h
python/: README.md  amie_2_anyburl.py  eval.py  eval_experiment.py
python_bindings/: .gitignore  safran.py  safran_wrapper.cpp  safran_wrapper.h  safran_wrapper.i  setup.py
resources/binaries/: IRIFAB  SAFRAN  config-apply.properties
resources/binaries/quickstart/: config-quickstart.properties
resources/binaries/quickstart/jaccard/: .gitkeep
src/: ApplicationEngine.cpp  Clustering.cpp  ClusteringEngine.cpp  ClusteringReader.cpp  Explaination.cpp  Explanation.cpp  Graph.cpp  InMemoryExplanation.cpp  Index.cpp  JaccardEngine.cpp  Main.cpp  MinHash.cpp  MinHeap.cpp  Rule.cpp  RuleApplication.cpp  RuleGraph.cpp  RuleReader.cpp  SQLiteExplanation.cpp  ScoreTree.cpp  TesttripleReader.cpp  TraintripleReader.cpp  Trial.cpp  ValidationtripleReader.cpp
tests/: test.cpp
